--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="content" id="main-content">
                 <h2>&#9733; Home &#9733;</h2>
-                <h3><i>Is is hot in here? Or did you jour pour lighter fluid on me?~</i></h3>
+                <h3><i>Is is hot in here? Or did you you just pour lighter fluid on me?~</i></h3>
                 <p>Careful, this grill is hot but her takes on adult media are even hotter~ This is the place to find reviews and essays about NSFW shows and movies you can't find anywhere else!You can see a sampling of my most recent works below and check out the full breadth of my work in <a href="/archives.html">the archive</a>.</p>
               <p>Currently under construction!</p>
                 
