--- a/aboutme.html
+++ b/aboutme.html
@@ -52,15 +52,10 @@
                 <p>&#9733; <b>Currently Reading:</b> The History of Hentai Manga</p>
                 <center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
                 <center><h3>Share my cool site with your friends!</h3></center>
-<center><p><img src="/grillout31-1.gif"></p>
+<center><p><img src="/Hot_Grill_Button"></p>
                       <p><textarea style="border: 1px solid; font-size:13px;  margin-top:5px; color: var(--col-lightContent); background: var(--col-bg); height:61px; width:163px;">&lt;a
  href="https://literalgrill.com"&gt;&lt;img 
-src="https://literalgrill.com/grillout31-1.gif" 
-alt="Visit the LiteralGrill at The GrillOut!"&gt;&lt;/a&gt;</textarea></p></center>
-                <center><p><img src="/grillout31-2.gif"></p>
-                      <p><textarea style="border: 1px solid; font-size:13px;  margin-top:5px; color: var(--col-lightContent); background: var(--col-bg); height:61px; width:163px;">&lt;a
- href="https://literalgrill.com"&gt;&lt;img 
-src="https://literalgrill.com/grillout31-2.gif" 
+src="https://literalgrill.com/Hot_Grill_Button.png" 
 alt="Visit the LiteralGrill at The GrillOut!"&gt;&lt;/a&gt;</textarea></p></center>
                 <center><p><img src="/StarBorder.png" width="100%" height="auto" alt=""></p></center>
             </div>
