--- a/aboutme.html
+++ b/aboutme.html
@@ -46,18 +46,18 @@
                 <p>On the less business-oriented side of things, I'm queer, disabled, and a fierce fighter for all marginalized people. While all those adventures above sound exciting, they also included a stint with homelessness. All of these things have informed how I act today. To put it simply: If you lean towards the right you won't like my content or me so kindly escort yourself elsewhere.</p>
                 <p> I successfully watched Groundhog Day once a day, every day, as part of the film's 30th anniversary. This resulted in musings for quite awhile on a podcast called <a href="https://podcasters.spotify.com/pod/show/didnt-we-do-this-ysterday">Didn't We Do This Yesterday?</a> and is likely to result in plenty of essays of both the text and video variety you'll be able to find on here at some point. I'm also a <a href="https://awc.moe/challenger/LiteralGrill">certified</a> <a href="https://anilist.co/forum/thread/5559/1">hentai master</a> so expect me to cover and discuss lewder anime titles with a critical eye now and again. </p>
                 <p>You might also find me enjoying a wide variety of board games, toying around with odd older game consoles like the Leapster L Max or Casio Loopy, or watching whatever weird movie or show I've somehow come across. That or continuing to amass my cursed collection of VHS tapes... Of course, I'm also often consuming anime seasonally while trying to watch older classics to learn about the medium. If you're interested in what I'm currently digging into, I've got all the info you'll need right below!</p>
-              <center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+                <center><p><img src="/xtape.png" width="50%" height="15%" alt="">
                 <p>&#9733; <b>Currently Watching:</b> Tsurikichi Sanpei, Mitsuboshi Colors, Giant Gorg, Tamako Market, Otaku Elf, Skull-face Bookseller Honda-san, The Demon Girl Next Door Season 2, & <a href="https://anilist.co/user/LiteralGrill/animelist">various seasonal shows</a>.</p>
                 <p>&#9733; <b>Currently Rewatching:</b> Attack No. 1 (<a href="https://sakurajima.moe/@literalgrill/114247853831069768">Watch it with me!</a>), Hamtaro, Restaurant To Another World, Wakakozake, Chihayafuru, & Love Is Like A Cocktail </p>
                 <p>&#9733; <b>Currently Reading:</b> The History of Hentai Manga</p>
-                <center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+                  <center><p><img src="/xtape.png" width="50%" height="15%" alt="">
                 <center><h3>Share my cool site with your friends!</h3></center>
-<center><p><img src="/Hot_Grill_Button"></p>
+<center><p><img src="/Hot_Grill_Button.png"></p>
                       <p><textarea style="border: 1px solid; font-size:13px;  margin-top:5px; color: var(--col-lightContent); background: var(--col-bg); height:61px; width:163px;">&lt;a
  href="https://literalgrill.com"&gt;&lt;img 
 src="https://literalgrill.com/Hot_Grill_Button.png" 
-alt="Visit the LiteralGrill at The GrillOut!"&gt;&lt;/a&gt;</textarea></p></center>
-                <center><p><img src="/StarBorder.png" width="100%" height="auto" alt=""></p></center>
+alt="Check out that smokin' hot grill~"&gt;&lt;/a&gt;</textarea></p></center>
+                <center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
             </div>
         </div>
 
