--- a/aboutme.html
+++ b/aboutme.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The GrillOut - About Me</title>
-    <meta name="description" content="Learn more about Borealis, aka the LiteralGrill, right here!">
-    <meta property="og:url" content="https://literalgrill.com/aboutme">
+    <title>Caution: Hot Grill - About Me</title>
+    <meta name="description" content="Learn more the hottest grill on the internet~">
+    <meta property="og:url" content="https://nsfw.literalgrill.com/aboutme">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="The GrillOut - About Me">
-    <meta property="og:description" content="Learn more about Borealis, aka the LiteralGrill, right here!">
+    <meta property="og:title" content="Caution: Hot Grill - About Me">
+    <meta property="og:description" content="Learn more about the hottest grill on the internet~">
     <meta property="og:image" content="https://literalgrill.com/grill.png">
-    <meta property="twitter:domain" content="https://literalgrill.com/aboutme">
-    <meta property="twitter:url" content="https://literalgrill.com/aboutme">
-    <meta name="twitter:title" content="The GrillOut - About Me">
-    <meta name="twitter:description" content="Learn more about Borealis, aka the LiteralGrill, right here!">
+    <meta property="twitter:domain" content="https://nsfw.literalgrill.com/aboutme">
+    <meta property="twitter:url" content="https://nsfw.literalgrill.com/aboutme">
+    <meta name="twitter:title" content="Caution: Hot Grill - About Me">
+    <meta name="twitter:description" content="Learn more about the hottest grill on the internet~">
     <meta name="twitter:image" content="https://literalgrill.com/grill.png">
     <meta name="theme-color" content="#FFB6C1">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -54,8 +54,8 @@
                 <center><h3>Share my cool site with your friends!</h3></center>
 <center><p><img src="/Hot_Grill_Button.png"></p>
                       <p><textarea style="border: 1px solid; font-size:13px;  margin-top:5px; color: var(--col-lightContent); background: var(--col-bg); height:61px; width:163px;">&lt;a
- href="https://literalgrill.com"&gt;&lt;img 
-src="https://literalgrill.com/Hot_Grill_Button.png" 
+ href="https://nsfw.literalgrill.com"&gt;&lt;img 
+src="https://nsfw.literalgrill.com/Hot_Grill_Button.png" 
 alt="Check out that smokin' hot grill~"&gt;&lt;/a&gt;</textarea></p></center>
                 <center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
             </div>
