--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caution: Hot Grill</title>
     <meta name="description" content="Careful, this grill is hot but her takes on adult media are even hotter~ This is the place to find reviews and essays about NSFW shows and movies you can't find anywhere else!">
-    <meta property="og:url" content="https://literalgrill.com/">
+    <meta property="og:url" content="https://nsfw.literalgrill.com/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="The GrillOut">
+    <meta property="og:title" content="Caution: Hot Grill">
     <meta property="og:description" content="Careful, this grill is hot but her takes on adult media are even hotter~ This is the place to find reviews and essays about NSFW shows and movies you can't find anywhere else!">
     <meta property="og:image" content="https://literalgrill.com/grill.png">
-    <meta property="twitter:domain" content="literalgrill.com">
-    <meta property="twitter:url" content="https://literalgrill.com/">
-    <meta name="twitter:title" content="The GrillOut">
+    <meta property="twitter:domain" content="nsfw.literalgrill.com">
+    <meta property="twitter:url" content="https://nsfw.literalgrill.com/">
+    <meta name="twitter:title" content="Caution: Hot Grill">
     <meta name="twitter:description" content="Careful, this grill is hot but her takes on adult media are even hotter~ This is the place to find reviews and essays about NSFW shows and movies you can't find anywhere else!">
     <meta name="twitter:image" content="https://literalgrill.com/grill.png">
     <meta name="theme-color" content="#FFB6C1">
@@ -22,7 +22,7 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="styles.css">
     <link rel="me" href="https://sakurajima.moe/@literalgrill">
-    <link rel="alternate" type="application/rss+xml" href="https://literalgrill.com/feed.xml" title="RSS">
+    <link rel="alternate" type="application/rss+xml" href="https://nsfw.literalgrill.com/feed.xml" title="RSS">
     <meta name="fediverse:creator" content="@literalgrill@sakurajima.moe"/>
    
   <title>Image with text under it</title>
