--- a/accessibility.html
+++ b/accessibility.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The GrillOut - Accessibility</title>
-    <meta name="description" content="Accessibility is important at the GrillOut! Here are all of our current accessibility features and everything else we're working on.">
-    <meta property="og:url" content="https://literalgrill.com/accessibility">
+    <title>Caution: Hot Grill - Accessibility</title>
+    <meta name="description" content="If a grill didn't care about accessibility, she wouldn't be NEARLY as hot!">
+    <meta property="og:url" content="https://nsfw.literalgrill.com/accessibility">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="The GrillOut- Accessibility">
-    <meta property="og:description" content="Accessibility is important at the GrillOut! Here are all of our current accessibility features and everything else we're working on.">
+    <meta property="og:title" content="Caution: Hot Grill - Accessibility">
+    <meta property="og:description" content="If a grill didn't care about accessibility, she wouldn't be NEARLY as hot!">
     <meta property="og:image" content="https://literalgrill.com/grill.png">
-    <meta property="twitter:domain" content="https://literalgrill.com/accessibility">
-    <meta property="twitter:url" content="https://literalgrill.com/accessibility">
-    <meta name="twitter:title" content="The GrillOut - Accessibility">
-    <meta name="twitter:description" content="Accessibility is important at the GrillOut! Here are all of our current accessibility features and everything else we're working on.">
+    <meta property="twitter:domain" content="https://nsfw.literalgrill.com/accessibility">
+    <meta property="twitter:url" content="https://nsfw.literalgrill.com/accessibility">
+    <meta name="twitter:title" content="Caution: Hot Grill - Accessibility">
+    <meta name="twitter:description" content="If a grill didn't care about accessibility, she wouldn't be NEARLY as hot!">
     <meta name="twitter:image" content="https://literalgrill.com/grill.png">
     <meta name="theme-color" content="#FFB6C1">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -22,7 +22,7 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="styles.css">
     <link rel="me" href="https://sakurajima.moe/@literalgrill">
-    <link rel="alternate" type="application/rss+xml" href="https://literalgrill.com/feed.xml" title="RSS">
+    <link rel="alternate" type="application/rss+xml" href="https://nsfw.literalgrill.com/feed.xml" title="RSS">
     <meta name="fediverse:creator" content="@literalgrill@sakurajima.moe"/>
 </head>
 
