--- a/archives.html
+++ b/archives.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The GrillOut - Archives</title>
-    <meta name="description" content="Every post that has graced The GrillOut. Hope you don't mind the charcoal dust!">
+    <title>Caution: Hot Grill - Archives</title>
+    <meta name="description" content="All of the hottest posts to ever grace this website! Just ignore the empty bottles of lube...">
     <meta property="og:url" content="https://literalgrill.com/archives">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="The GrillOut - Archives">
-    <meta property="og:description" content="Every post that has graced The GrillOut. Hope you don't mind the charcoal dust!">
+    <meta property="og:title" content="Caution: Hot Grill - Archives">
+    <meta property="og:description" content="All of the hottest posts to ever grace this website! Just ignore the empty bottles of lube...">
     <meta property="og:image" content="https://literalgrill.com/grill.png">
-    <meta property="twitter:domain" content="https://literalgrill.com/archives">
-    <meta property="twitter:url" content="https://literalgrill.com/archives">
-    <meta name="twitter:title" content="The GrillOut - Archives">
-    <meta name="twitter:description" content="Every post that has graced The GrillOut. Hope you don't mind the charcoal dust!">
+    <meta property="twitter:domain" content="https://nsfw.literalgrill.com/archives">
+    <meta property="twitter:url" content="https://nsfw.literalgrill.com/archives">
+    <meta name="twitter:title" content="Caution: Hot Grill - Archives">
+    <meta name="twitter:description" content="All of the hottest posts to ever grace this website! Just ignore the empty bottles of lube...">
     <meta name="twitter:image" content="https://literalgrill.com/grill.png">
     <meta name="theme-color" content="#FFB6C1">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -44,47 +44,41 @@
 <p>Are you looking for a particular article here on the GrillOut? Well this is the place to be! This page will contain an alphabetical listing of every post on the site as well as specific sections for any articles that have series so you can see the posts in order. This page is a little rough on screen readers and I'm working on a better archive system as I can!</p>
 <p> Of course if nothing else works, CTRL+F is your friend! If you really do need some help or even potentially want me to write about a specific subject, please reach out to me on social media where I'll be happy to talk to you!</p>
 
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 <center><h3> &#9733; <a href="/reviews">Reviews</a> &#9733;</h3></center>
 
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
-
-<center><h3>The Animated History of Treasure Island</h3>
-<p><a href="/Treasure_Island/the_animated_history_of_treasure_island_the_missing_links.html">(1)</a> &#9733;
-<a href="/Treasure_Island/the_animated_history_of_treasure_island_mel_o_toons_1960.html">(2)</a></p></center>
-
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 <font face="arial,helvetica" size="4">
-<p align="center"> [ <a href="https://literalgrill.com/archives#a">A</a> ]
-[ <a href="https://literalgrill.com/archives#b">B</a> ]
-[ <a href="https://literalgrill.com/archives#c">C</a> ]
-[ <a href="https://literalgrill.com/archives#d">D</a> ]
-[ <a href="https://literalgrill.com/archives#e">E</a> ]
-[ <a href="https://literalgrill.com/archives#f">F</a> ]
-[ <a href="https://literalgrill.com/archives#g">G</a> ]
-[ <a href="https://literalgrill.com/archives#h">H</a> ]
-[ <a href="https://literalgrill.com/archives#i">I</a> ]
-[ <a href="https://literalgrill.com/archives#j">J</a> ]
-[ <a href="https://literalgrill.com/archives#k">K</a> ]
-[ <a href="https://literalgrill.com/archives#l">L</a> ]
-[ <a href="https://literalgrill.com/archives#m">M</a> ]<br>
-[ <a href="https://literalgrill.com/archives#n">N</a> ]
-[ <a href="https://literalgrill.com/archives#o">O</a> ]
-[ <a href="https://literalgrill.com/archives#p">P</a> ]
-[ <a href="https://literalgrill.com/archives#q">Q</a> ]
-[ <a href="https://literalgrill.com/archives#r">R</a> ]
-[ <a href="https://literalgrill.com/archives#s">S</a> ]
-[ <a href="https://literalgrill.com/archives#t">T</a> ]
-[ <a href="https://literalgrill.com/archives#u">U</a> ]
-[ <a href="https://literalgrill.com/archives#v">V</a> ]
-[ <a href="https://literalgrill.com/archives#w">W</a> ]
-[ <a href="https://literalgrill.com/archives#x">X</a> ]
-[ <a href="https://literalgrill.com/archives#y">Y</a> ]
-[ <a href="https://literalgrill.com/archives#z">Z</a> ]
+<p align="center"> [ <a href="https://nsfw.literalgrill.com/archives#a">A</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#b">B</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#c">C</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#d">D</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#e">E</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#f">F</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#g">G</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#h">H</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#i">I</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#j">J</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#k">K</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#l">L</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#m">M</a> ]<br>
+[ <a href="https://nsfw.literalgrill.com/archives#n">N</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#o">O</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#p">P</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#q">Q</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#r">R</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#s">S</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#t">T</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#u">U</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#v">V</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#w">W</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#x">X</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#y">Y</a> ]
+[ <a href="https://nsfw.literalgrill.com/archives#z">Z</a> ]
 </p></font>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 <br>
 <a name="a"><h3>&#9733;Article Titles A</h3>
 </a>
