--- a/aboutme.html
+++ b/aboutme.html
@@ -50,7 +50,7 @@
                 <p>&#9733; <b>Currently Watching:</b> Tsurikichi Sanpei, Mitsuboshi Colors, Giant Gorg, Tamako Market, Otaku Elf, Skull-face Bookseller Honda-san, The Demon Girl Next Door Season 2, & <a href="https://anilist.co/user/LiteralGrill/animelist">various seasonal shows</a>.</p>
                 <p>&#9733; <b>Currently Rewatching:</b> Attack No. 1 (<a href="https://sakurajima.moe/@literalgrill/114247853831069768">Watch it with me!</a>), Hamtaro, Restaurant To Another World, Wakakozake, Chihayafuru, & Love Is Like A Cocktail </p>
                 <p>&#9733; <b>Currently Reading:</b> The History of Hentai Manga</p>
-                  <center><p><img src="/xtape.png" width="50%" height="15%" alt="">
+                  <center><p><img src="/tape.png" width="50%" height="15%" alt="">
                 <center><h3>Share my cool site with your friends!</h3></center>
 <center><p><img src="/Hot_Grill_Button.png"></p>
                       <p><textarea style="border: 1px solid; font-size:13px;  margin-top:5px; color: var(--col-lightContent); background: var(--col-bg); height:61px; width:163px;">&lt;a
