--- a/archives.html
+++ b/archives.html
@@ -51,7 +51,7 @@
 <center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 <font face="arial,helvetica" size="4">
-<p align="center"> [ <a href="https://nsfw.literalgrill.com/archives#a">A</a> ]
+<p align="center"> [ <a href="https://nsfw.literalgrill.com/archives.html#a">A</a> ]
 [ <a href="https://nsfw.literalgrill.com/archives#b">B</a> ]
 [ <a href="https://nsfw.literalgrill.com/archives#c">C</a> ]
 [ <a href="https://nsfw.literalgrill.com/archives#d">D</a> ]
@@ -87,7 +87,6 @@
 <center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
 <a name="b"><h3>&#9733;Article Titles B</h3>
 </a>
-<p>&#9733; <a href="/Other_Posts/matt-deserves-better-on-big-brother-25.html">Big Brother 25 Is Openly Televising the Abuses Disabled People Experience Every Day</a></p>
 <center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
 
 
