--- a/archives.html
+++ b/archives.html
@@ -51,32 +51,32 @@
 <center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 <font face="arial,helvetica" size="4">
-<p align="center"> [ <a href="https://nsfw.literalgrill.com/archives.html#a">A</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#b">B</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#c">C</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#d">D</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#e">E</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#f">F</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#g">G</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#h">H</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#i">I</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#j">J</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#k">K</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#l">L</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#m">M</a> ]<br>
-[ <a href="https://nsfw.literalgrill.com/archives#n">N</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#o">O</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#p">P</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#q">Q</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#r">R</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#s">S</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#t">T</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#u">U</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#v">V</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#w">W</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#x">X</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#y">Y</a> ]
-[ <a href="https://nsfw.literalgrill.com/archives#z">Z</a> ]
+<p align="center"> [ <a href="/archives.html#a">A</a> ]
+[ <a href="archives#b">B</a> ]
+[ <a href="/archives#c">C</a> ]
+[ <a href="/archives#d">D</a> ]
+[ <a href="/archives#e">E</a> ]
+[ <a href="/archives#f">F</a> ]
+[ <a href="/archives#g">G</a> ]
+[ <a href="/archives#h">H</a> ]
+[ <a href="/archives#i">I</a> ]
+[ <a href="/archives#j">J</a> ]
+[ <a href="/archives#k">K</a> ]
+[ <a href="/archives#l">L</a> ]
+[ <a href="/archives#m">M</a> ]<br>
+[ <a href="/archives#n">N</a> ]
+[ <a href="/archives#o">O</a> ]
+[ <a href="/archives#p">P</a> ]
+[ <a href="/archives#q">Q</a> ]
+[ <a href="/archives#r">R</a> ]
+[ <a href="/archives#s">S</a> ]
+[ <a href="/archives#t">T</a> ]
+[ <a href="/archives#u">U</a> ]
+[ <a href="/archives#v">V</a> ]
+[ <a href="/archives#w">W</a> ]
+[ <a href="/archives#x">X</a> ]
+[ <a href="/archives#y">Y</a> ]
+[ <a href="/archives#z">Z</a> ]
 </p></font>
 <center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 <br>
@@ -84,20 +84,20 @@
 </a>
 <br>
 
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 <a name="b"><h3>&#9733;Article Titles B</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="c"><h3>&#9733;Article Titles C</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 
 <a name="d"><h3>&#9733;Article Titles D</h3>
 </a>
-<p>&#9733; <a href="/The_Anime_Posts/Delicious_in_Dungeon_Oppression_War_and_the_Power_of_Bread">Delicious in Dungeon: Oppression, War, and the Power of Bread</a></p>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+
+<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 
 <a name="e"><h3>&#9733;Article Titles E</h3>
 </a>
