--- a/archives.html
+++ b/archives.html
@@ -78,149 +78,145 @@
 [ <a href="/archives#y">Y</a> ]
 [ <a href="/archives#z">Z</a> ]
 </p></font>
-<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 <br>
 <a name="a"><h3>&#9733;Article Titles A</h3>
 </a>
 <br>
 
-<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 <a name="b"><h3>&#9733;Article Titles B</h3>
 </a>
-<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="c"><h3>&#9733;Article Titles C</h3>
 </a>
-<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 <a name="d"><h3>&#9733;Article Titles D</h3>
 </a>
 
-<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 <a name="e"><h3>&#9733;Article Titles E</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="f"><h3>&#9733;Article Titles F</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="g"><h3>&#9733;Article Titles G</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="h"><h3>&#9733;Article Titles H</h3>
 </a>
-<p>&#9733;<a href="/Other_Posts/How_I_Unearthed_Forty_Year_Old_Mario_History.html">How I Unearthed A Forty-Year-Old Piece Of Mario History</a></p>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="i"><h3>&#9733;Article Titles I</h3>
 </a>
-<p>&#9733;<a href="/The_Anime_Posts/I_Am_A_Dog_Don_Matsugoro_On_Bettering_Our_World.html">I Am A Dog: Don Matsugoro on Bettering Our World</a></p>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="j"><h3>&#9733;Article Titles J</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="k"><h3>&#9733;Article Titles K</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="l"><h3>&#9733;Article Titles L</h3>
 </a>
-<p>&#9733; <a href="/The_Anime_Posts/top_10_anime_2023.html">LiteralGrill's Top 10 Anime of 2023</a></p>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="m"><h3>&#9733;Article Titles M</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="n"><h3>&#9733;Article Titles N</h3>
 </a>
-<p>&#9733; <a href="/Other_Posts/norwegian_trans_asylum_viral_post_debunked.html">No, Norway Did Not Just Introduce a Bill to Allow Trans People in the US to Apply for Asylum There</a></p>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="o"><h3>&#9733;Article Titles O</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="p"><h3>&#9733;Article Titles P</h3>
 </a>
 
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 <a name="q"><h3>&#9733;Article Titles Q</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="r"><h3>&#9733;Article Titles R</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="s"><h3>&#9733;Article Titles S</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="t"><h3>&#9733;Article Titles T</h3>
 </a>
-<p>&#9733; <a href="/The_Anime_Posts/TomcatsBigAdventureRareAnime">Tomcat's Big Adventure - An Anime Rarity at The Beacon</a></p>
-<p>&#9733; <a href="/Treasure_Island/the_animated_history_of_treasure_island_the_missing_links.html">The Animated History Of Treasure Island: The Missing Links</a></p>
-<p>&#9733; <a href="/Treasure_Island/the_animated_history_of_treasure_island_mel_o_toons_1960.html">The Animated History Of Treasure Island: Mel-O-Toons (1960)</a></p>
-<p>&#9733; <a href="/The_Anime_Posts/TransphobiaShouldBeMaintainedInAdaptationsATransPerspective.html">Transphobia Should Be Maintained in Adaptations: A Trans Perspective</a></p>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="u"><h3>&#9733;Article Titles U</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="v"><h3>&#9733;Article Titles V</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="w"><h3>&#9733;Article Titles W</h3>
 </a>
-<p>&#9733; <a href="/WatchOncePile/inandout">Watch Once Pile© - In & Out </a></p>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="x"><h3>&#9733;Article Titles X</h3>
 </a>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="y"><h3>&#9733;Article Titles Y</h3>
 </a>
-<p>&#9733; <a href="/The_Anime_Posts/YouShouldShowGraveOfTheFirefliesToYourKids.html">You Should Show Grave of the Fireflies to Your Kids</a></p>
-<center><p><img src="/border.png" width="120" height="30" alt=""></p></center>
+
+<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
 <a name="z"><h3>&#9733;Article Titles Z</h3></a>
-<p>&#9733; <a href="/The_Anime_Posts/zom_100_truly_living_despite_a_pandemic">Zom 100: Truly Living Despite A Pandemic</a></p>
+
 
 <br>
 
                 
-                <center><p><img src="/StarBorder.png" width="100%" height="auto" alt=""></p></center>
+                <center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
             </div>
         </div>
 
