--- a/archives.html
+++ b/archives.html
@@ -48,7 +48,7 @@
 
 <center><h3> &#9733; <a href="/reviews">Reviews</a> &#9733;</h3></center>
 
-<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
+<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 
 <font face="arial,helvetica" size="4">
 <p align="center"> [ <a href="/archives.html#a">A</a> ]
