--- a/archives.html
+++ b/archives.html
@@ -78,7 +78,7 @@
 [ <a href="/archives#y">Y</a> ]
 [ <a href="/archives#z">Z</a> ]
 </p></font>
-<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
+<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 <br>
 <a name="a"><h3>&#9733;Article Titles A</h3>
 </a>
