--- a/anime_posts/ecchi_hentai_spring_2025_anime_guide.html
+++ b/anime_posts/ecchi_hentai_spring_2025_anime_guide.html
@@ -55,7 +55,7 @@
 <p>Needless to say there is plenty of adult content ahead, <b>so any readers under 18 please make good choices about what you consume and consider if it is appropriate for you to read ahead.</b> The time for long winded intros is done, let’s get to the anime!
 </p>
 
-<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
+<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 
 <p><img style="display:block;" width="100%" height="100%" src="/anime_posts/anime_pics/YandereDarkElf.png" align="center" alt="A dark elf looking menacing, with one eye glowing."></p>
 <h3>Yandere Dark Elf: She Chased Me All the Way From Another World!</h3>
@@ -80,7 +80,7 @@
 
 <h4> Streaming On: <a href="https://www.hidive.com/season/30190">HIDIVE</a> (Censored)</h4>
 
-<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
+<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 
 <p><img style="display:block;" width="100%" height="100%" src="/anime_posts/anime_pics/Takamine.png" align="center" alt="A girl pointing dramatically at a boy with a nervous sweat drop on his head."></p>
 <h3>Please Put Them On, Takamine-san </h3>
@@ -110,7 +110,7 @@
 
 <h4> Streaming On: <a href="https://www.crunchyroll.com/series/G3KHEVD1D/please-put-them-on-takamine-san">Crunchyroll</a> (Censored)</h4>
 
-<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
+<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 
 <p><img style="display:block;" width="100%" height="100%" src="/anime_posts/anime_pics/Unexpectedly Naughty Fukami.png" align="center" alt="A man looking at another man with amorous intent with a cute sparkly background."></p>
 <h3>Unexpectedly Naughty Fukami</h3>
@@ -147,7 +147,7 @@ At least, that’s what he thought... until he glimpsed Fukami coming out of the
 
 <h4> Streaming On: <a href="https://oceanveil.net/anime_titles/146">OceanVeil</a> (Uncensored!)</h4>
 
-<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
+<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 
 <p><img style="display:block;" width="100%" height="100%" src="/anime_posts/anime_pics/Makina.jpg" align="center" alt="A cute girl with orange, red, and yellow hair winking."></p>
 <h3>Kakushite! Makina-san!</h3>
@@ -180,7 +180,7 @@ At least, that’s what he thought... until he glimpsed Fukami coming out of the
 
 <h4> Streaming On: <a href="https://oceanveil.net/anime_titles/148">OceanVeil</a> (Uncensored!)</h4>
 
-<center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
+<center><p><img src="/xtape.png" width="50%" height="15%" alt=""></p></center>
 
 <p>Well as the famous crossdressing rabbit usually says, “That’s all folks!” See? I knew I could bring it back to the whole spring thing! While there are a couple other shows on the saucy side coming out much later in the season like <i>Notto Sexaroid Eurie!</i> and <i>Boku no Risou no Isekai Seikatsu</i>, I don’t know if those will even be available via legal means in North America yet. If that changes, or they do become available, I’ll add them to this article upon their release if anything changes. I’m not against people enjoying their rum on the seven seas when they have to, but especially seeing OceanVeil making a bold attempt to provide a service we don’t usually get here in a tough market, I want to lead folks to shows like that more than I do our saltiest sailors at the moment.</p>
 
