--- a/archives.html
+++ b/archives.html
@@ -179,7 +179,7 @@
 
 <a name="t"><h3>&#9733;Article Titles T</h3>
 </a>
-
+<p>&#9733; <a href="/anime_posts/ecchi_hentai_spring_2025_anime_guide.html">The Good, The Bad, and the Horny: Spring Anime 2025 Preview Guide</a></p>
 <center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
 
 
