--- a/archives.html
+++ b/archives.html
@@ -52,7 +52,7 @@
 
 <font face="arial,helvetica" size="4">
 <p align="center"> [ <a href="/archives.html#a">A</a> ]
-[ <a href="archives#b">B</a> ]
+[ <a href="/archives#b">B</a> ]
 [ <a href="/archives#c">C</a> ]
 [ <a href="/archives#d">D</a> ]
 [ <a href="/archives#e">E</a> ]
