--- a/archives.html
+++ b/archives.html
@@ -41,7 +41,7 @@
             <div class="content" id="main-content">
                 <h2>&#9733; Archive &#9733;</h2>
 
-<p>Are you looking for a particular article here on the GrillOut? Well this is the place to be! This page will contain an alphabetical listing of every post on the site as well as specific sections for any articles that have series so you can see the posts in order. This page is a little rough on screen readers and I'm working on a better archive system as I can!</p>
+<p>Are you looking for a particular article I've written on here? Well this is the place to be! This page will contain an alphabetical listing of every post on the site as well as specific sections for any articles that have series so you can see the posts in order. This page is a little rough on screen readers and I'm working on a better archive system as I can!</p>
 <p> Of course if nothing else works, CTRL+F is your friend! If you really do need some help or even potentially want me to write about a specific subject, please reach out to me on social media where I'll be happy to talk to you!</p>
 
 <center><p><img src="/tape.png" width="50%" height="15%" alt=""></p></center>
